--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,7 @@
 <%= @player_one %> vs. <%= @player_two %>
 
 <%= @player_two %> 60/60 HP
+
+<form action="/attack">
+  <input type="submit" value="Hug <%= @player_two %>">
+</form>
