--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,3 @@
-<%= @player_one %> has hugged <%= @player_two %>
+<p><%= @player_one.name %> has hugged <%= @player_two.name %></p>
+<p><%= @player_two.name %> has <%=@player_two.hit_points%> /100 HP.</p>
+<a href="/play">OK</a>
