--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,3 @@
-<p><%= @player_one.name %> has hugged <%= @player_two.name %></p>
-<p><%= @player_two.name %> has <%=@player_two.hit_points%> /100 HP.</p>
+<p><%= @player1.name %> has hugged <%= @player2.name %></p>
+<p><%= @player2.name %> has <%= $player2.hit_points %> /100 HP.</p>
 <a href="/play">OK</a>
