--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,6 @@
-<%= @player_one.name %> vs. <%= @player_two.name %>
+<%= @player1_name %> vs. <%= @player2_name %>
 
-<%= @player_two.name %>: <%= @player_two.hit_points %> /100 HP
+<%= @player2_name %>: <%= $player2.hit_points %> /100 HP
 
 <form action="/attack">
   <input type="submit" value="Hug">
