--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,6 @@
 <p><%= @player1.name %> has hugged <%= @player2.name %></p>
 <p><%= @player2.name %> has <%= $player2.hit_points %> /100 HP.</p>
 <a href="/play">OK</a>
+<div>
+  <img src="images/giphy.gif">
+</div>
