--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,5 +1,5 @@
-<p><%= @player1.name %> has hugged <%= @player2.name %></p>
-<p><%= @player2.name %> has <%= $player2.hit_points %> /100 HP.</p>
+<p><%= @game.player1.name %> has hugged <%= @game.player2.name %></p>
+<p><%= @game.player2.name %> has <%= @game.player2.hit_points %> /100 HP.</p>
 <a href="/play">OK</a>
 <div>
   <img src="images/giphy.gif">
