--- a/views/play.erb
+++ b/views/play.erb
@@ -1,7 +1,7 @@
-<%= @game.player1.name %> vs. <%= @game.player2.name%>
-
-<%= @game.player2.name %>: <%= @game.player2.hit_points %> /100 HP
-
+<h1><%= @game.player1.name %> vs. <%= @game.player2.name%></h1>
+<p><%= @game.player1.name %>: <%= @game.player1.hit_points %> / 100 HP
+<%= @game.player2.name %>: <%= @game.player2.hit_points %> / 100 HP</p>
+<h2><%= @game.current_player.name %>'s turn</h2>
 <form action="/attack">
   <input type="submit" value="Hug">
   <!-- and then calls the hugs method on the player one -->
